--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "starter-kit",
-  "description": "Scaffolding for a cockpit module",
+  "name": "wp360",
+  "description": "Cockpit module for the WP360 PLC",
   "type": "module",
   "main": "index.js",
-  "repository": "git@github.com:cockpit/starter-kit.git",
+  "repository": "git@github.com:overdigit/wp360-cockpit-plugin.git",
   "author": "",
   "license": "LGPL-2.1",
   "engines": {
